Using the built CSS as the main file for the component so Sass isn't required

--- a/index.scss
+++ b/index.scss
@@ -398,12 +398,18 @@
 }
 
 .is-waiting {
-  @include transition(opacity 250ms linear);
-  @include disable-selection;
+  transition: opacity 250ms linear;
+  user-select: none;
+  cursor: default;
   opacity: 0.5;
-  @include after {
-    @extend .stretch;
-  }
+}
+
+.is-waiting:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .is-clickthrough {
@@ -475,7 +481,7 @@
     text-decoration: none;
   }
   &:hover .title-2 {
-    color: $light-green;
+    color: #79Be10;
   }
 }
 
