--- a/index.css
+++ b/index.css
@@ -415,13 +415,13 @@
  * Horizontal text alignment
  */
 .text-center {
-  text-align: center; }
+  text-align: center !important; }
 
 .text-left {
-  text-align: left; }
+  text-align: left !important; }
 
 .text-right {
-  text-align: right; }
+  text-align: right !important; }
 
 /* ==========================================================================
   Link utilities
