--- a/index.scss
+++ b/index.scss
@@ -459,15 +459,15 @@
  */
 
 .text-center {
-    text-align: center;
+    text-align: center !important;
 }
 
 .text-left {
-    text-align: left;
+    text-align: left !important;
 }
 
 .text-right {
-    text-align: right;
+    text-align: right !important;
 }
 
 /* ==========================================================================
