added the class .hidden to .is-hidden due to default reactive bindings

--- a/index.css
+++ b/index.css
@@ -303,7 +303,7 @@
 /**
  * Completely remove from the flow and screen readers.
  */
-.is-hidden, .js .no-js-only, .no-js .js-only {
+.is-hidden, .hidden, .js .no-js-only, .no-js .js-only {
   display: none !important;
   visibility: hidden !important; }
 
