added a class to capture pointer events - cause sometimes you want to capture pointer events on a child element after ignoring pointer events on a parent element

--- a/index.scss
+++ b/index.scss
@@ -410,8 +410,13 @@
   bottom: 0;
 }
 
-.is-clickthrough {
+.is-clickthrough,
+.ignore-pointer-events {
   pointer-events: none;
+}
+
+.capture-pointer-events {
+  pointer-events: auto;
 }
 
 /* ==========================================================================
